<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlienPlayer</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="volume">Volume</string>
    <string name="media_scan">Media Scan</string>
    <string name="audioEffect">Audio Effect</string>
    <string name="search">Search</string>
    <string name="discover">Discover</string>
    <string name="track_details">Track Details</string>
    <string name="search_hint">Artists, albums, and tracks</string>
    <string name="recents">Recents</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="album_artists">Album Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="album_artist">Album Artist</string>
    <string name="track">Track</string>
    <string name="year">Year</string>
    <string name="artwork">Artwork</string>
    <string name="lyric">Lyric</string>
    <string name="info">Info</string>
    <string name="no_lyric">No Lyric</string>
    <string name="no_result">No Result</string>
    <string name="no_item">No Item</string>
    <string name="download_list">Download List</string>
    <string name="clear_history">Clear History</string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="aborted">Aborted</string>
    <string name="network_error">Network Error</string>

    <!-- menu title -->
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="view">View</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="abort">Abort</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start_rolling">Start Rolling</string>
    <string name="stop_rolling">Stop Rolling</string>
    <string name="name_hint">Enter name</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="download_all">Download All</string>
    <string name="clear">Clear done</string>

    <!-- dialog -->
    <string name="download_track_confirm">Are you sure to download this track?</string>
    <string name="delete_track_confirm">Are you sure to delete this track?</string>
    <string name="delete_file_aswell">Delete file as well</string>
    <string name="download_fail">Download failed</string>
    <string name="download_task_added">Added to download list</string>

</resources>