<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/discover"
        android:orderInCategory="98"
        android:title="@string/discover"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_volume"
        android:orderInCategory="99"
        android:title="@string/volume"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="101"
        android:title="@string/exit"
        app:showAsAction="never"/>

</menu>